@@ -15,8 +15,13 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.11.0</version>
 				<configuration>
-					<source>21</source>
-					<target>21</target>
+					<source>25</source>
+					<target>25</target>
+
+					<compilerArgs>
+						<arg>--add-modules</arg>
+						<arg>java.se,java.desktop</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
